<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/four_dp">
    <!--fid,name,cat,qty,price,total-->
    <TextView
        android:id="@+id/tv_fid_inlist"
        style="@style/TextCustom"
        android:fontFamily="sans-serif"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/four_dp"
        android:text="@string/food_id" />

    <TextView
        android:id="@+id/tv_cat_inlist"
        style="@style/TextCustom"
        android:fontFamily="sans-serif"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:ellipsize="end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_fid_inlist"
        android:padding="@dimen/four_dp"
        android:text="@string/category" />

    <TextView
        android:id="@+id/tv_qty_inlist"
        style="@style/TextCustom"
        android:fontFamily="sans-serif"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_cat_inlist"
        android:padding="@dimen/four_dp"
        android:text="@string/qty" />


    <TextView
        android:id="@+id/tv_tot_inlist"
        style="@style/TextCustom"
        android:fontFamily="sans-serif"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_cat_inlist"
        android:background="@drawable/edittext_back_grey"
        android:layout_alignParentRight="true"
        android:padding="@dimen/four_dp"
        android:text="@string/price" />

</RelativeLayout>