<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".orders.OrderDetailActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_add_order"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/red"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:id="@+id/sv_order_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/four_dp"
            android:orientation="vertical"
            android:padding="@dimen/four_dp">

            <TextView
                android:id="@+id/tv_oid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/four_dp"
                android:fontFamily="serif"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:hint="@string/order_id_1_s"
                android:inputType="textCapWords"
                android:padding="@dimen/eight_dp"
                android:textColor="@color/dgrey" />

            <TextView
                android:id="@+id/tv_tot_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/four_dp"
                android:fontFamily="serif"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:hint="@string/total_price_1_s"
                android:inputType="text"
                android:padding="@dimen/eight_dp"
                android:textColor="@color/dgrey" />

            <TextView
                android:id="@+id/tv_restau"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/four_dp"
                android:fontFamily="serif"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:hint="@string/restaurant_name_1_s"
                android:inputType="textCapCharacters"
                android:padding="@dimen/eight_dp"
                android:textColor="@color/dgrey" />

            <TextView
                android:id="@+id/tv_rcont"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/four_dp"
                android:fontFamily="serif"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:hint="@string/restaurant_cont_1_s"
                android:inputType="textCapCharacters"
                android:padding="@dimen/eight_dp"
                android:textColor="@color/dgrey" />

            <!--lv-->
            <ListView
                android:nestedScrollingEnabled="true"
                android:id="@+id/list_orders"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_margin="@dimen/eight_dp"
                android:background="@drawable/edittext_back_grey"
                android:visibility="visible"
                android:divider="@color/cardback"
                android:dividerHeight="1dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/four_dp"
                android:fontFamily="sans-serif-smallcaps"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:padding="@dimen/eight_dp"
                android:text="Delivery Details: "
                android:textColor="@color/deep_red" />

            <TextView
                android:id="@+id/tv_time_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/four_dp"
                android:fontFamily="serif"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:hint="@string/time_of_order_1_s"
                android:inputType="number"
                android:padding="@dimen/eight_dp"
                android:textColor="@color/dgrey" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_delivery_assign"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/four_dp"
                    android:fontFamily="serif"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:hint="@string/delivery_assigned_to_1_s"
                    android:inputType="textPersonName"
                    android:padding="@dimen/eight_dp"
                    android:textColor="@color/dgrey" />

                <ImageView
                    android:id="@+id/dmap"
                    android:onClick="onMarkerClicked"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/marker"
                    android:layout_width="30dp"
                    android:layout_height="45dp" />


            </RelativeLayout>


            <TextView
                android:id="@+id/tv_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/four_dp"
                android:fontFamily="serif"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:hint="@string/order_status_1_s"
                android:inputType="textCapWords"
                android:padding="@dimen/eight_dp"
                android:textColor="@color/dgrey" />

            <TextView
                android:id="@+id/tv_dcontact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/four_dp"
                android:fontFamily="serif"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:hint="@string/contact_1_s"
                android:inputType="text"
                android:padding="@dimen/eight_dp"
                android:textColor="@color/dgrey" />

            <TextView
                android:id="@+id/tv_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/four_dp"
                android:fontFamily="serif"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:hint="@string/delivery_address_1_s"
                android:inputType="text"
                android:padding="@dimen/eight_dp"
                android:textColor="@color/dgrey" />
        </LinearLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>